Complete Java Pattern compatibility for Pkl Regex behavior